Fixed an issue with dialogs having unreadable select boxes due to the dark colored backgrounds. It turns out that you can style select boxes, but they don't accept gradients.

--- a/less/fabulaultima.less
+++ b/less/fabulaultima.less
@@ -125,8 +125,11 @@ button.fabula-button {
     }
 
     select {
-        color: #000000;
-        background: @font-color;
+        color: @font-color;
+
+        option {
+            background: @accent-fallback;
+        }
 
         &:active,
         &:focus {
