--- a/less/ui.less
+++ b/less/ui.less
@@ -3,6 +3,29 @@
         background: @main-fallback;
         background: @main-gradient;
 
+        .dialog-content {
+            form {
+                .form-group {
+                    label {
+                        color: @font-color;
+                    }
+
+                    input[type="text"],
+                    input::placeholder {
+                        color: @font-color;
+                    }
+
+                    select {
+                        color: @font-color;
+
+                        option {
+                            background: @accent-fallback;
+                        }
+                    }
+                }
+            }
+        }
+
         .dialog-buttons button {
             color: @font-color;
             border: 1px solid @font-color;
